--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
-    <title>React App</title>
+    <title>Chat-with-Legends</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
